WIP: current changes before branch

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.thymeleaf.mode=HTML
 spring.thymeleaf.cache=false
 spring.mvc.view.prefix=/templates/
 spring.mvc.view.suffix=.html
+app.upload.url=http://localhost:8080/api/speedtest/sink
